--- a/index.html
+++ b/index.html
@@ -3,9 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Emediong Godwin Udofia's Course Home Page">
+    <meta name="author" content="Emediong Godwin Udofia">
+    <title>Course Home Page</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <script src="scripts/scripts.js" defer></script>
+
+     <!-- Google Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>WDD 131 - Emediong Udofia</h1>
+    <header>
+        <div class="profile">
+            <img src="images/profile.jpg" alt="Emediong G. Udofia" width="70" height="70">
+            <h1>Emediong G. Udofia</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Chamber</a></li>
+                <li><a href="#">GitHub Profile</a></li>
+                <li><a href="#">LinkedIn</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Home</h2>
+        <div class="content">
+            <div class="card">
+                <h3>Course Work</h3>
+                <ul>
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3>Uyo, Nigeria</h3>
+                <img src="images/palm_trees.jpg" alt="Palm Trees">
+                <p>Palm Trees</p>
+            </div>
+        </div>
+
+        <section class="certificate">
+            <h3>Web and Computer Programming Certificate</h3>
+            <div class="buttons">
+                <button onclick="filterCourses('all')">All</button>
+                <button onclick="filterCourses('CSE')">CSE</button>
+                <button onclick="filterCourses('WDD')">WDD</button>
+            </div>
+            <div class="courses">
+                <div class="course CSE">CSE 110</div>
+                <div class="course WDD">WDD 130</div>
+                <div class="course CSE">CSE 111</div>
+                <div class="course CSE">CSE 210</div>
+                <div class="course WDD">WDD 131</div>
+                <div class="course WDD">WDD 231</div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>©2025 🌺 Emediong Godwin Udofia 🌺 Nigeria</p>
+        <p class="last-update">Last Update: <span id="lastUpdate"></span></p>
+        <img src="images/nigeria_flag.jpg" alt="Nigeria Flag" width="40" height="40">
+    </footer>
 </body>
 </html>
