--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
 
     <main>
         <h2>Home</h2>
-        <div class="content">
+        <section class="content">
+            <div class="box">
+                <h3>Course Work</h3>
+                <ul>
+                    <li>•</li>
+                    <li>•</li>
+                    <li>•</li>
+                </ul>
+            </div>
+            <div class="box">
+                <h3>Uyo, Nigeria</h3>
+                <img src="images/palm_trees.jpg" alt="Palm Trees" width="300" height="300">
+                <p>Palm Trees</p>
+            </div>
+        </section>
+        <!-- <div class="content">
             <div class="card">
                 <h3>Course Work</h3>
                 <ul>
@@ -46,7 +61,7 @@
                 <img src="images/palm_trees.jpg" alt="Palm Trees">
                 <p>Palm Trees</p>
             </div>
-        </div>
+        </div> -->
 
         <section class="certificate">
             <h3>Web and Computer Programming Certificate</h3>
