--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="box">
                 <h3>Course Work</h3>
                 <ul>
-                    <li>•</li>
-                    <li>•</li>
-                    <li>•</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
             </div>
             <div class="box">
@@ -70,6 +70,8 @@
                 <button onclick="filterCourses('CSE')">CSE</button>
                 <button onclick="filterCourses('WDD')">WDD</button>
             </div>
+        </section>
+        <section class="course_list">
             <div class="courses">
                 <div class="course CSE">CSE 110</div>
                 <div class="course WDD">WDD 130</div>
