--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="profile">
-            <h1>Emediong G. Udofia</h1>
+            <h1>Course Home Page</h1>
             <img src="images/profile.jpg" alt="Emediong G. Udofia" width="70" height="70">
             
         </div>
