--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="profile">
             <img src="images/profile.jpg" alt="Emediong G. Udofia" width="70" height="70">
-            <h1>Course Home Page</h1>
+            <h1>Emediong G. Udofia</h1>
         </div>
         <nav>
             <ul>
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <h2>Home</h2>
+        <h1>Home</h1>
         <section class="content">
             <div class="box">
                 <h3>Course Work</h3>
