--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,15 +12,15 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/menu.css">
     <script src="scripts/menu.js" defer></script>
-    <script src="scripts/fetchMembers.js" defer></script>
+    <script src="scripts/fetchmembers.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="portal home page">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Godswill_Akpabio_International_Stadium_-_front_view.jpg/1280px-Godswill_Akpabio_International_Stadium_-_front_view.jpg"> 
-    <meta property="og:url" content="https://emyudofia1.github.io/wdd231">
+    <meta property="og:image" content="https://chamber/images/Godswill_Akpabio_International_Stadium_-_front_view.jpg"> 
+    <meta property="og:url" content="https://emyudofia1.github.io/wdd231/blob/main/chamber/directory.html">
 </head>
 <body>
     <header>
@@ -55,7 +55,8 @@
         <p id="lastModified"></p>
         <p>info@Ibomachamber.com</p>
         <p>WDD231 Project | BYU</p>
+        <script src="../scripts/getdates.js"></script>
     </footer>
-        <script src="../scripts/getDates.js"></script>
+        
 </body>
 </html>
