--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="images/favicon.ico">
     <meta property="og:title" content="portal home page">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://chamber/images/Godswill_Akpabio_International_Stadium_-_front_view.jpg"> 
+    <meta property="og:image" content="chamber/images/Godswill_Akpabio_International_Stadium_-_front_view.jpg"> 
     <meta property="og:url" content="https://emyudofia1.github.io/wdd231/blob/main/chamber/directory.html">
 </head>
 <body>
