--- a/index.html
+++ b/index.html
@@ -47,26 +47,25 @@
                 <p>Palm Trees</p>
             </div>
         </section>
-
         <section class="certificate">
-            <h3>Web and Computer Programming Certificate</h3>
-            <div class="buttons">
-                <button onclick="filterCourses('all')">All</button>
-                <button onclick="filterCourses('CSE')">CSE</button>
-                <button onclick="filterCourses('WDD')">WDD</button>
+            <div class="cert-box">
+                <h3>Web and Computer Programming Certificate</h3>
+                <div class="buttons">
+                    <button class="active" onclick="filterCourses('all')">All</button>
+                    <button onclick="filterCourses('CSE')">CSE</button>
+                    <button onclick="filterCourses('WDD')">WDD</button>
+                </div>
+                <div class="courses">
+                    <div class="course CSE">CSE 110</div>
+                    <div class="course WDD">WDD 130</div>
+                    <div class="course CSE">CSE 111</div>
+                    <div class="course CSE">CSE 210</div>
+                    <div class="course WDD">WDD 131</div>
+                    <div class="course WDD">WDD 231</div>
+                </div>
             </div>
         </section>
-
-        <section class="course_list">
-            <div class="courses">
-                <div class="course CSE">CSE 110</div>
-                <div class="course WDD">WDD 130</div>
-                <div class="course CSE">CSE 111</div>
-                <div class="course CSE">CSE 210</div>
-                <div class="course WDD">WDD 131</div>
-                <div class="course WDD">WDD 231</div>
-            </div>
-        </section>
+        
     </main>
 
     <footer>
