--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Chamber</a></li>
+                <li><a href="#">Final</a></li>
                 <li><a href="#">GitHub Profile</a></li>
                 <li><a href="#">LinkedIn</a></li>
             </ul>
@@ -31,7 +32,7 @@
     </header>
 
     <main>
-        <h1>Home</h1>
+        <h2>Home</h2>
         <section class="content">
             <div class="box">
                 <h3>Course Work</h3>
