Course work for week 2 to 5

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,10 +13,11 @@
   <title>Ibom Chamber of Commerce</title>
   <!-- <script src="scripts/spotLight.js" defer></script> -->
   <link rel="stylesheet" href="styles/normalize.css">
-  <script src="scripts_new/spotlight.js" defer></script>
+  <script src="/chamber/scripts/spotlight.js" defer></script>
+   <script src="/chamber/scripts/spotlight.js" defer></script>
   <script src="scripts/menu.js" defer></script>
   <link rel="stylesheet" href="styles/index.css">
-  <link rel="stylesheet" href="styles/edited.css">
+  <!-- <link rel="stylesheet" href="styles/edited.css"> -->
   <meta property="og:title" content="Akwa Ibom State, Nigeria">
 <meta property="og:type" content="website">
 <meta property="og:image" content="https://en.wikipedia.org/wiki/Calabar#/media/File:Hand_sculpture_roundabout,_Calabar,_Cross_River_state2.jpg">
@@ -49,7 +50,7 @@
   
 
   <section class="hero">
-    <img src="images_new/hero.jpeg" alt="Scalable, responsive hero image" />
+    <img src="images/hero.jpeg" alt="Scalable, responsive hero image" />
     <button class="cta-button">Ibom Chamber of commerce, Where Businesses Thrives..</button>
   </section>
 
