--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -29,7 +29,7 @@
             </section>
             <section>
                 <h2>Site purpose</h2>
-                <p>The Ibom Chamber of Commerce website aims to support local businesses and attract investment by providing the necessary resources, networking opportunities, and promoting economic development in the Calabar and Tinapa regions. It serves as a comprehensive hub for business activities, events, advocacy, and member services, fostering a vibrant and prosperous business community.</p>
+                <p>The Ibom Chamber of Commerce website aims to support local businesses and attract investment by providing the necessary resources, networking opportunities, and promoting economic development in the Akwa Ibom and Uyo regions. It serves as a comprehensive hub for business activities, events, advocacy, and member services, fostering a vibrant and prosperous business community.</p>
             </section>
             <section>
                 <h2>Scenarios</h2>
