fixed styles link

--- a/my_project/index.html
+++ b/my_project/index.html
@@ -8,7 +8,9 @@
   <meta name="author" content="Emediong Godwin Udofia">
   <meta name="description" content="Curated Selection of Stunning Flowers with images and Details">
   <title>Bloom & Petal</title>
-  <link rel="stylesheet" href="/my_project/styles/styles.css" />
+  <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
+  <link rel="stylesheet" href="styles/styles.css" />
+
   <script src="/my_project/scripts/main.js"></script>
 </head>
 
