--- a/my_project/care.html
+++ b/my_project/care.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Learn how to care for your flowers and explore creative floral design ideas." />
   <title>Care & Design Tips | Bloom & Petal</title>
-  <link rel="stylesheet" href="/my_project/styles/styles.css" />
+  <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
+  <link rel="stylesheet" href="styles/styles.css" />
   <script src="/my_project/scripts/main.js" defer></script>
 </head>
 <body>
