--- a/my_project/contact.html
+++ b/my_project/contact.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Bloom & Petal</title>
-  <link rel="stylesheet" href="/my_project/styles/styles.css" />
+  <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
+   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
 <body>
