--- a/my_project/thankyou.html
+++ b/my_project/thankyou.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thank You – Bloom & Petal</title>
-  <link rel="stylesheet" href="/my_project/styles/styles.css" />
+  <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
+   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <header>
