--- a/my_project/contact.html
+++ b/my_project/contact.html
@@ -29,7 +29,7 @@
     </section>
 
     <section class="contact-form">
-        <form id="contactForm" action="thankyou.html" method="get">
+        <form id="contactForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
