--- a/my_project/thankyou.html
+++ b/my_project/thankyou.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thank You – Bloom & Petal</title>
-  <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
-   <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <header>
@@ -27,7 +26,10 @@
     </section>
 
     <section class="confirmation-message">
-      <!-- Filled dynamically with JavaScript -->
+      <p><strong>Name:</strong> <span id="confirm-name"></span></p>
+      <p><strong>Email:</strong> <span id="confirm-email"></span></p>
+      <p><strong>Message:</strong></p>
+      <p id="confirm-message" class="message-box"></p>
     </section>
   </main>
 
@@ -36,6 +38,6 @@
     <p>WDD231 Class Project<br>Emediong Udofia</p>
   </footer>
 
-  <script src="/my_project/scripts/confirmation.js"></script>
+  <script src="scripts/confirmation.js"></script>
 </body>
 </html>
