fied thannk you message

--- a/my_project/contact.html
+++ b/my_project/contact.html
@@ -18,7 +18,7 @@
         <li><a href="gallery.html">Flower Gallery</a></li>
         <li><a href="care.html">Care & Design Tips</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
-        <li><a href="thankyou.html">Contact</a></li>
+        <li><a href="thankyou.html"></a></li>
       </ul>
     </nav>
   </header>
