fixed javascript links

--- a/my_project/thankyou.html
+++ b/my_project/thankyou.html
@@ -38,6 +38,8 @@
     <p>WDD231 Class Project<br>Emediong Udofia</p>
   </footer>
 
+  <!-- <script src="scripts/confirmation.js"></script> -->
+
   <script src="scripts/confirmation.js"></script>
 </body>
 </html>
