--- a/my_project/care.html
+++ b/my_project/care.html
@@ -7,7 +7,7 @@
   <title>Care & Design Tips | Bloom & Petal</title>
   <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
   <link rel="stylesheet" href="styles/styles.css" />
-  <script src="/my_project/scripts/main.js" defer></script>
+  <script src="scripts/main.js" defer></script>
 </head>
 <body>
   <header>
