--- a/my_project/confirmation.html
+++ b/my_project/confirmation.html
@@ -39,6 +39,7 @@
     <p>WDD231 Class Project<br>Emediong Udofia</p>
   </footer>
 
-  <script src="/my_project/scripts/confirmation.js"></script>
+  <!-- <script src="/my_project/scripts/confirmation.js"></script> -->
+  <script src="scripts/confirmation.js"></script>
 </body>
 </html>
