--- a/my_project/contact.html
+++ b/my_project/contact.html
@@ -51,7 +51,9 @@
     <p>WDD231 Class Project<br>Emediong Udofia</p>
   </footer>
 
-  <script src="/my_project/scripts/contact.js"></script>
+  <!-- <script src="/my_project/scripts/contact.js"></script> -->
+  <script src="scripts/contact.js"></script>
+
   
 </body>
 
