--- a/my_project/gallery.html
+++ b/my_project/gallery.html
@@ -38,8 +38,10 @@
     <p>WDD231 Class Project<br>Emediong Udofia</p>
   </footer>
 
-  <script src="/my_project/scripts/gallery.js"></script>
-  <script src="/my_project/scripts/main.js"></script>
+  <!-- <script src="/my_project/scripts/gallery.js"></script> -->
+  <!-- <script src="/my_project/scripts/main.js"></script> -->
+  <script src="scripts/gallery.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 
 </html>
