--- a/my_project/index.html
+++ b/my_project/index.html
@@ -10,8 +10,10 @@
   <title>Bloom & Petal</title>
   <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
   <link rel="stylesheet" href="styles/styles.css" />
+  
 
-  <script src="/my_project/scripts/main.js"></script>
+  <!-- <script src="/my_project/scripts/main.js"></script> -->
+   <script src="scripts/main.js"></script>
 </head>
 
 <body>
