updated the async funtionality

--- a/my_project/gallery.html
+++ b/my_project/gallery.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bloom & Petal - Gallery</title>
-  <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
    <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
@@ -40,7 +39,9 @@
 
   <!-- <script src="/my_project/scripts/gallery.js"></script> -->
   <!-- <script src="/my_project/scripts/main.js"></script> -->
-  <script src="scripts/gallery.js"></script>
+  <!-- <script src="scripts/gallery.js"></script> -->
+  <script type="module" src="scripts/gallery.js"></script>
+
   <script src="scripts/main.js"></script>
 </body>
 
