--- a/my_project/care.html
+++ b/my_project/care.html
@@ -7,7 +7,11 @@
   <title>Care & Design Tips | Bloom & Petal</title>
   <!-- <link rel="stylesheet" href="/my_project/styles/styles.css" /> -->
   <link rel="stylesheet" href="styles/styles.css" />
-  <script src="scripts/main.js" defer></script>
+  <!-- <script src="scripts/main.js" defer></script> -->
+  <!-- <script src="scripts/main.js"></script> -->
+  <script type="module" src="scripts/main.js"></script>
+
+
 </head>
 <body>
   <header>
