--- a/my_project/gallery.html
+++ b/my_project/gallery.html
@@ -42,7 +42,9 @@
   <!-- <script src="scripts/gallery.js"></script> -->
   <script type="module" src="scripts/gallery.js"></script>
 
-  <script src="scripts/main.js"></script>
+  <!-- <script src="scripts/main.js"></script> -->
+  <script type="module" src="scripts/main.js"></script>
+
 </body>
 
 </html>
