--- a/my_project/index.html
+++ b/my_project/index.html
@@ -13,7 +13,9 @@
   
 
   <!-- <script src="/my_project/scripts/main.js"></script> -->
-   <script src="scripts/main.js"></script>
+   <!-- <script src="scripts/main.js"></script> -->
+   <script type="module" src="scripts/main.js"></script>
+
 </head>
 
 <body>
